--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <!-- set `maximum-scale` for some compatibility issues -->
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
+    <link rel="stylesheet" href="index.css">
     <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <script>
         if ('addEventListener' in document) {
